src/test/ui/type/type-check/cannot_infer_local_or_array.stderr
error[E0282]: type annotations needed for `[_; 0]`
  --> $DIR/cannot_infer_local_or_array.rs:2:13
   |
LL |     let x = [];
   |             ^^ cannot infer type
   |
help: consider giving this binding the explicit type `[_; 0]`, with the type parameters specified
   |
LL |     let x: [_; 0] = [];
   |          ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
